--- a/web-wedding-gold/index.html
+++ b/web-wedding-gold/index.html
@@ -369,7 +369,9 @@ function tambah($data)
 
       <div class="ww-footer bg-light">
         <div class="container text-center py-4">
-          <p class="my-0">&copy; baliantprojects.com</p>
+          <p class="my-0">&copy; 2021</p>
+                    <!-- <p class="my-0"> @baliant.projects</p> -->
+                    <p class="my-0">ilustration by pexels.com</p>
         </div>
       </div>
     </div>
