--- a/index.html
+++ b/index.html
@@ -45,10 +45,7 @@ https://templatemo.com/tm-530-mini-profile
               <div class="tm-welcome-left">
                 <h2 class="tm-welcome-title">Welcome to Mini Profile Page</h2>
                 <p class="pb-0">
-                  This is Bootstrap v4.3.1 parallax layout for you. Credit goes to <a rel="nofollow" href="https://www.pexels.com">Pexels</a> for 2 background images. In
-                  odio sapien, commodo id ullamcorper ac, dignissim at sapien.
-                  Nullam leo massa, vaius ac massa et, tincidunt imperdiet
-                turpis. </p>
+                  I have graduated from the STIKOM Bali Institute of Technology and Business in 2021. Now I am able to work using computers. I am a person who enjoys socializing, meeting and working with new people. For me all work is important and in doing something I will try my best with full responsibility. </p>
               </div>
             </div>
             <!-- Brown bg -->
