--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ https://templatemo.com/tm-530-mini-profile
             <!-- Brown bg -->
             <div class="col-md-5">
               <div class="tm-welcome-right" >
-                <img src="img/log.jpg" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" alt="" data-aos="fade-up"  data-aos-anchor-placement="top-bottom" data-aos-duration="2000">
+                <img src="img/foto.jpg" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" alt="" data-aos="fade-up"  data-aos-anchor-placement="top-bottom" data-aos-duration="2000">
                 <h3>Ni Komang Ega Widyastuti</h3>
                 <p class="mb-0">
                   freelance web developer
