--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ https://templatemo.com/tm-530-mini-profile
             <!-- White transparent bg -->
             <div class="col-md-7 tm-welcome-left-col" data-aos="fade-left" >
               <div class="tm-welcome-left">
-                <h2 class="tm-welcome-title">Welcome to Mini Profile Page</h2>
+                <h2 class="tm-welcome-title">Welcome to My Mini Profile</h2>
                 <p class="pb-0">
                   I have graduated from the STIKOM Bali Institute of Technology and Business in 2021. Now I am able to work using computers. I am a person who enjoys socializing, meeting and working with new people. For me all work is important and in doing something I will try my best with full responsibility. </p>
               </div>
