--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ https://templatemo.com/tm-530-mini-profile
             <div class="card mb-3 tm-bg-white-transparent"  data-aos="zoom-in" data-aos-duration="2000">
               <div class="card-body text-center">
                 <img src="img/port-5.png" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" alt="" >
-                <a href="metatah/index.html" class="btn btn-secondary mt-1">Live Demo</a>
+                <a href="metatah-2/index.html" class="btn btn-secondary mt-1">Live Demo</a>
               </div>
             </div>
           </div>
